--- a/package.json
+++ b/package.json
@@ -10,17 +10,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/qrcode.react": "^3.0.0",
     "@types/styled-components": "^5.1.34",
+    "@types/uuid": "^10.0.0",
     "escpos": "^3.0.0-alpha.6",
     "escpos-usb": "^3.0.0-alpha.4",
     "express": "^4.21.2",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.2",
     "lucide-react": "^0.474.0",
+    "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.3",
+    "socket.io-client": "^4.8.1",
     "styled-components": "^6.1.14",
+    "uuid": "^11.0.5",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
