--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-responsive": "^10.0.1",
     "react-router-dom": "^7.1.3",
     "socket.io-client": "^4.8.1",
     "uuid": "^11.0.5",
